Move things around a few px to solve clipping

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -5,7 +5,7 @@ html, body {
 
 #filterer {
     position: fixed;
-    top: 4px;
+    top: 6px;
     width: 23%;
 }
 
@@ -23,6 +23,7 @@ html, body {
     width: 70%;
     min-height: 100%;
     overflow: auto;
+    padding-top: 3px;
 }
 
 @media print {
